Removed bugging overflow-x due to mostpopposter

--- a/src/features/movies/movies.scss
+++ b/src/features/movies/movies.scss
@@ -1,19 +1,21 @@
 /* movies list */
 .mostPopMovieContainer {
   position: relative;
+  left: -10vw;
+  width: 100vw;
 }
 
 .mostPopMovieSecondaryPoster {
   position: relative;
   top: 0;
-  left: -10vw;
-  width: 100vw;
   z-index: -2;
+  width: 100%;
 }
 .mostPopMoviePrimaryPoster {
   position: absolute;
+  overflow-x: hidden;
   bottom: 3vh;
-  left: -5vw;
+  left: 5vw;
   width: 22vw;
   border: 1px var(--second-color) solid;
   border-radius: 0.3rem;
